<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear_selection"
        android:icon="@drawable/ic_close"
        android:title="@string/action_clear_selection"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_cut"
        android:title="@string/action_cut"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_add_favorite"
        android:icon="@drawable/ic_star"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_compress"
        android:title="@string/action_compress"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_extract"
        android:title="@string/action_extract"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_properties"
        android:title="@string/action_properties"
        app:showAsAction="never" />
</menu>
