<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rotate"
        android:title="@string/action_rotate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exif"
        android:title="@string/action_exif"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_wallpaper"
        android:title="@string/action_wallpaper"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_properties"
        android:title="@string/action_properties"
        app:showAsAction="never" />
</menu>
