<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_file"
        android:icon="@drawable/ic_new_file"
        android:title="@string/dialog_new_file_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_folder"
        android:icon="@drawable/ic_new_folder"
        android:title="@string/action_new_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_check_circle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_paste"
        android:title="@string/action_paste"
        android:icon="@drawable/ic_paste"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hidden"
        android:title="@string/hidden_show"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fav_sort"
        android:title="@string/fav_sort_title"
        android:icon="@drawable/ic_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fav_group"
        android:title="@string/fav_group_by_type"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_history"
        android:title="@string/action_clear_history"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />
</menu>
